--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,27 +1,33 @@
 /* _variables.scss */
 $breakpoints: (
-  'sm': 340,
+  'sm': 414,
   'md': 768,
   'lg': 1215,
 ) !default;
 @mixin mq($mq, $bp1:lg, $bp2:lg){
+  // 引数の幅の設定
   $w1    : map-get($breakpoints, $bp1);
   $w2    : map-get($breakpoints, $bp2);
+
+  // 出力する文字列の設定
   $min1  : 'min-width: #{($w1+1)}px';
   $max1  : 'max-width: #{($w1)}px';
   $min2  : 'min-width: #{($w1+1)}px';
   $max2  : 'max-width: #{($w2)}px';
 
+  // 引数がminの場合
   @if $mq == min {
     @media screen and ($min1) {
       @content;
     }
   }
+  // 引数がmaxの場合
   @else if $mq == max {
     @media screen and ($max1) {
       @content;
     }
   }
+  // 引数がmin-maxの場合
   @else if $mq == min-max {
     @media screen and ($min2) and ($max2) {
       @content;
