--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -16,9 +16,13 @@ a{
     color: #060606;
 }
 
-body, header, footer, main, section, div, p, li, dt, dd, a, h2{
+body, header, footer, main, div, p, li, dt, dd, a, h2{
     margin: 10px;
     padding: 10px;
+    @include mq('max','sm') {
+        margin: 5px;
+        padding: 5px;
+    }
 }
 
 h2, p{
